Fixing tags not showing

--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -25,5 +25,9 @@
 
 .post-category,
 .post-tag {
-  margin: 0 5px;
+  display: inline-block;
+  margin-right: 5px;
+  padding: 2px 4px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
